--- a/packages/assets-compiler/package.json
+++ b/packages/assets-compiler/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsx ."
   },
   "dependencies": {
     "lodash": "^4.17.21",
